# AutoPaper

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README.zh-CN.md  SKILL_RELEASE_CHECKLIST.md  TEAM_GUIDE.md  config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
.claude-plugin/: marketplace.json
.claude-plugin/autopaper/: autopaper-add.md  autopaper-generate.md  autopaper-sync-obsidian.md
autopaper/: __init__.py  config.py  config_validation.py  database.py  main.py  models.py
autopaper/ai/: __init__.py  extract_article_metadata.py  generate_infocard.py
autopaper/commands/: add.py  card.py  cover.py  delete.py  export.py  generate.py  list.py  send_email.py  sync.py
autopaper/publishers/: email.py  obsidian.py  pdf.py
autopaper/scrapers/: article.py
autopaper/templates/: email.html.j2  issue.html.j2  issue.md.j2
autopaper/utils/: cache.py  date.py  extract_date.py  images.py  json_parser.py  logging.py  profiling.py  retry.py  slug.py  web.py  web_fetcher.py
claude-skills/: EXTEND.md  QUICKSTART.md  README.md  package.json  skills.json
claude-skills/.claude-plugin/: marketplace.json
claude-skills/agents/autopaper/: autopaper-export-pdf.md
claude-skills/examples/: newsletter-workflow.md  sample-article.md
claude-skills/extract-metadata/: SKILL.md  main.py
claude-skills/extract-metadata/references/: README.md
claude-skills/extract-metadata/scripts/: main.py
claude-skills/generate-card/: SKILL.md  main.py
claude-skills/generate-card/references/: README.md
claude-skills/shared/: json_parser.py
claude-skills/tests/: basic_tests.py
docs/: AutoPaper-Design.md  EMAIL_FEATURE.md  GITHUB_RELEASE_GUIDE.md  GITHUB_RELEASE_NOTES.md  QUICKSTART.md  README.md  SKILL.md
scripts/: autopaper-wrapper.sh  install_optional_deps.sh  prepare_github_release.sh  publish.sh  send_test_email.py
skills/: compose_issue.py  extract_article_metadata.py  generate_infocard.py  generate_summary_card.py  normalize_tags.py
tests/: test_commands.py  test_models.py  test_scrapers.py
(+17 files in other folders)
